Add a w3c group (tag) to the document.
Respec now requires this in order to use W3C styles.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     // All config options at https://respec.org/docs/
     var respecConfig = {
       specStatus: 'editor-draft-finding',
+      group: 'tag',
       isPreview: true,
       format: 'markdown',
       editors: [{
