Make the sentence singular.

--- a/index.html
+++ b/index.html
@@ -692,9 +692,9 @@ Strings derived from [=identifiers=], for instance through hashing, are still
 
 <div class="practice">
 
-<span class="practicelab" id="principle-identity-per-context">[=User agents=] should help
-their users present the [=identity=] those people want in each [=context=] they find
-themselves in.</span>
+<span class="practicelab" id="principle-identity-per-context">A [=user agent=] should help
+its user present the [=identity=] they want in each [=context=] they find themself
+in.</span>
 
 Sometimes this means the UA should ensure that one site can't learn anything about their
 user's behavior on another site, while at other times the UA should help their user prove to
