Refine the intro paragraph.

--- a/index.html
+++ b/index.html
@@ -1179,8 +1179,8 @@ improved privacy.
 ## Balancing Conflicting Privacy Rights {#balancing}
 
 Sometimes different people's privacy rights come into conflict. Often this happens when
-one user of a service is trying to invade another user's privacy: hiding all private
-information about the first user can prevent the service from protecting the second user.
+one user of a service is trying to invade another user's privacy: keeping a user's
+information private can limit the ways that a service can protect another user.
 
 <div class="practice">
 
