Add an example of technical and legal measures.

--- a/index.html
+++ b/index.html
@@ -1227,6 +1227,20 @@ purposes.
 
 </aside>
 
+<aside class="example" id="example-technical-legal-measures" title="Technical and Legal Measures">
+
+A site might segregate the data it collects for safety reasons from its business data by:
+
+1. Writing in its privacy policy that these types of data are kept separate. (A legal
+   measure)
+1. Using multi-party computation to ensure that its business side can't learn the
+   sensitive safety data unless both its safety side and a trusted third party collude. (A technical measure)
+1. Hiring a trusted auditor to check that the algorithms are sufficient to provide the
+   guarantees they claim to provide, and that there isn't, in fact, any collusion.
+   (Another technical measure)
+
+</aside>
+
 <aside class="note">
 
 Note that people's privacy can also conflict with other important concerns. As discussed
