--- a/index.html
+++ b/index.html
@@ -1086,8 +1086,8 @@ law enforcement and intellligence agencies.
 
 ## Principles for Vulnerable People
 
-Some people, or groups of people, are at greater risk from the asymmetries of power created by the
-concentration of information power ([[?Automating-Inequality]]). [=People=] who for whatever reason
+Some people, or groups of people, are more easily coerced into giving up their privacy.
+[=People=] who for whatever reason
 are in a more [=vulnerable=] position with respect to data [=processing=] should be more proactively
 protected by the [=user agent=] as well as by [=parties=].
 
