--- a/index.html
+++ b/index.html
@@ -1094,8 +1094,7 @@ protected by the [=user agent=] as well as by [=parties=].
 One issue, however, is that signalling to [=parties=] that a [=person=] may be [=vulnerable=] is
 itself a sensitive piece of information that should not be shared. One way to approach this issue is
 to rely on a [=global opt-out=] mechanism such as [[?GPC]] that is used by [=people=] whether they
-are [=vulnerable=] or not and puts a requirement on [=parties=] to minimise their [=data=]
-[=processing=].
+are [=vulnerable=] or not.
 
 <div class="practice">
 
