Clarify the cross-site identity principle. (#115)

--- a/index.html
+++ b/index.html
@@ -692,9 +692,13 @@ Strings derived from [=identifiers=], for instance through hashing, are still
 
 <div class="practice">
 
-<span class="practicelab" id="principle-identity-per-context">[=User agents=] should support
-their [=users=]' [=autonomy=] by helping them present their intended [=identity=] to each
-[=context=] that they visit.</span>
+<span class="practicelab" id="principle-identity-per-context">A [=user agent=] should help
+its user present the [=identity=] they want in each [=context=] they find themself
+in.</span>
+
+Sometimes this means the UA should ensure that one site can't learn anything about their
+user's behavior on another site, while at other times the UA should help their user prove to
+one site that they have a particular identity on another site.
 
 </div>
 
