Remove mention of principle importance and imply that principles are often not really in conflict.

--- a/index.html
+++ b/index.html
@@ -337,9 +337,8 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 ## How This Document Fits In
 
 This document elaborates on the privacy principle in the [[[Ethical-Web]]]. It doesn't
-address how to balance the different principles in that document when they come into
-conflict and should not be taken as a statement that privacy is more or less important
-than the other principles.
+address how to balance the different principles in that document if they come into
+conflict.
 
 Privacy is covered by legal frameworks and this document recognises that existing data
 protection laws take precedence for legal matters. However, because the Web is global, we
