add direct link to principle

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 
 ## How This Document Fits In
 
-This document elaborates on the privacy principle in the [[[Ethical-Web]]]. It doesn't
+This document elaborates on the [privacy principle](https://www.w3.org/2001/tag/doc/ethical-web-principles/#privacy) in the [[[Ethical-Web]]]. It doesn't
 address how to balance the different principles in that document if they come into
 conflict.
 
