fix the <q> that hadn't been fixed

--- a/index.html
+++ b/index.html
@@ -351,13 +351,13 @@ understanding is that the law is a floor, not a ceiling.
 
 # An Introduction to Privacy on the Web {#intro}
 
-The Web is for everyone ([[?For-Everyone]]). It is "a platform that helps people and provides a
-net positive social benefit" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
-Web serves people is by protecting them in the face of asymmetries of power and this includes
+The Web is for everyone ([[?For-Everyone]]). It is "<i>a platform that helps people and provides a
+net positive social benefit</i>" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
+Web serves people is by protecting them in the face of asymmetries of power, and this includes
 establishing and enforcing rules to govern the power of data.
 
 The Web is a social and technical system made up of [=information flows=]. Because this document
-is specifically about [=privacy=] as it applies to the Web, it focuses on privacy around
+is specifically about [=privacy=] as it applies to the Web, it focuses on privacy with respect to
 information flows. Our goal is not to boil the privacy ocean, but rather to provide enough
 background to support the Web community in making informed decisions about privacy and to weave
 privacy into the architecture of the Web. Few architectural principles are absolute, and privacy is
@@ -377,7 +377,7 @@ behaviours that would be more easily kept in check if the perpetrator had to be 
 the victim.
 
 These asymmetries of information and of automation create commanding asymmetries of power. It is not
-so much that <q>code is law</q>  but rather that code is judge, jury, and executioner.
+so much that "<i>code is law</i>"  but rather that code is judge, jury, and executioner.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of [=principles=] that regulate [=information flows=]. When
 [=people=] are involved in these [=information flows=], [=data governance=] determines how
@@ -565,7 +565,7 @@ make or in increasing their [=autonomy=], it plays a critical role in letting
 researchers and reporters inform our
 collective decision-making about to privacy [=principles=]. This consideration extends the
 TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2015/11/strong-web-platform-statement/)
-to ensure that <q>broad testing and audit continues to be possible</q> where
+to ensure that "<i>broad testing and audit continues to be possible</i>" where
 [=information flows=] and automated decisions are involved.
 
 Such transparency can only function if there are strong rights of access to data (including data
@@ -873,8 +873,8 @@ of data processing. Any [=party=] that is not a [=service provider=] is a [=data
 
 ### Techniques {#data-techniques}
 
-The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which <q>what happens with the
-[=first party=] stays with the [=first party=]</q>. Put differently, the [=Vegas Rule=] is followed
+The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<i>what happens with the
+[=first party=] stays with the [=first party=]</i>." Put differently, the [=Vegas Rule=] is followed
 when the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
 guideline, it's neither necessary nor sufficient for [=appropriate=] [=data processing=]. A [=first
 party=] that maintains exclusive access to a person's data can still [=process=] it
