slightly more consistent terminology

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ These asymmetries of information and of automation create commanding asymmetries
 so much that "<i>code is law</i>"  but rather that code is judge, jury, and executioner.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of [=principles=] that regulate [=information flows=]. When
-[=people=] are involved in these [=information flows=], [=data governance=] determines how
+[=people=] are involved in [=information flows=], [=data governance=] determines how
 these [=principles=] constrain and distribute the power of information between different [=actors=].
 The <dfn>principles</dfn> describe the way in which different [=actors=] may, must,
 or must not produce or [=process=] flows of information from, to, or about other [=actors=]
@@ -391,7 +391,7 @@ companies, associations, or political parties (eg. in the case of espionage), wh
 [=parties=]. It is important to keep in mind that not all people are equal in how they can resist
 the imposition of unfair [=principles=]: some [=people=] are more [=vulnerable=] and therefore in greater
 need of protection. The focus of this document is on the impact that this power differential can
-have against people, but it can also impact other entities, such as companies or governments.
+have against people, but it can also impact other [=actors=], such as companies or governments.
 
 [=Principles=] vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
 have different expectations of [=privacy=] at work, at a café, or at home for instance. Understanding and
@@ -553,7 +553,7 @@ in [=user agents=] and establishing or delegating to institutions that can handl
 increasing <em>individual</em> control instead of acting collectively.
 
 Collecting data at large scales can have significant pro-social outcomes. Problems tend to
-emerge when entities [=process=] [=data=]
+emerge when [=actors=] [=process=] [=data=]
 for collective benefit and for [=self-dealing=] [=purposes=] at the same time.
 The [=self-dealing=] [=purposes=] are often justified as bankrolling the pro-social outcomes
 but this requires collective oversight to be [=appropriate=].
@@ -631,7 +631,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
     Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
     [=person=] using it in all situations, including in preference to the [=user agent=]'s implementer.
     When a [=user agent=] carries out [=processing=] that is not in the [=person=]'s
-    interest but instead benefits another entity (such as the user agent's implementer) that behaviour is
+    interest but instead benefits another [=actor=] (such as the user agent's implementer) that behaviour is
     known as <dfn>self-dealing</dfn>. Behaviour can be [=self-dealing=] even if it is done at the
     same time as [=processing=] that is in the [=person=]'s interest, what matters is that it
     potentially conflicts with that [=person=]'s interest. [=Self-dealing=] is always
@@ -855,7 +855,7 @@ If a [=person=] could reasonably be identified or re-identified when [=data=] is
 ### Data users and use {#data-users}
 
 A <dfn data-lt="data processor">service provider</dfn> or [=data processor=] is considered to be the same
-[=party=] as the entity contracting it to perform the relevant [=processing=] if it:
+[=party=] as the [=actor=] contracting it to perform the relevant [=processing=] if it:
 
 * is processing the data on behalf of that [=party=];
 * ensures that the data is only retained, accessed, and used as directed by that
